--- a/app/src/main/res/layout/rv_row_home.xml
+++ b/app/src/main/res/layout/rv_row_home.xml
@@ -11,8 +11,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
-        app:cardBackgroundColor="#21778e"
-        app:cardCornerRadius="15dp"
         app:cardElevation="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,34 +23,65 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <!-- Media -->
 
-            <ImageView
-                android:id="@+id/imageDeal"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="194dp"
-                android:contentDescription="content_description_media"
-                android:scaleType="centerCrop"
-                app:srcCompat="@drawable/bgg" />
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|start"
+                android:layout_weight="1"
+                android:background="@color/white"
+                android:gravity="center|start"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/course_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="MATHEMATICS"
+                    android:textColor="@color/colorPrimaryDark"
+                    android:textSize="24sp" />
+
+                <TextView
+                    android:id="@+id/course_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:singleLine="true"
+                    android:text="Geometry, Algebra, Equations"
+                    android:textColor="@android:color/black"
+                    android:textSize="14sp" />
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="45dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center|start"
+                android:layout_weight="1"
                 android:background="@color/white"
-                android:gravity="center|start"
-                android:orientation="horizontal">
+                android:gravity="center|end"
+                android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/tvDescription3"
+                    android:id="@+id/course_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:text="Primary Sector"
+                    android:singleLine="true"
+                    android:text="0%"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/module_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:text="12 modules"
                     android:textColor="@color/colorPrimaryDark"
-                    android:textSize="24sp" />
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
