--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -37,8 +37,7 @@
 
     <View
         android:layout_width="0dp"
-        android:layout_height="@dimen/spacing_xxxlarge"
-        android:layout_weight=""/>
+        android:layout_height="@dimen/spacing_xxxlarge" />
 
 
     <androidx.cardview.widget.CardView
