--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,8 +27,7 @@
         android:id="@+id/rv_course_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:spanCount="4"/>
-<!--        tools:listitem="@layout/rv_row_home" />-->
+        tools:listitem="@layout/rv_row_home" />
 
 
 </LinearLayout>
