--- a/app/src/main/res/layout/content_courses.xml
+++ b/app/src/main/res/layout/content_courses.xml
@@ -10,9 +10,10 @@
 
 
     <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar2"
+        android:id="@+id/toolbar_content"
         android:layout_width="match_parent"
         android:layout_height="@dimen/actionBarSize"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
         android:background="@color/white"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
@@ -29,11 +30,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_topic_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
         android:nestedScrollingEnabled="true"
         android:scrollbarThumbVertical="@color/white"
-        app:spanCount="4"/>
-<!--        tools:listitem="@layout/rv_course_modules" />-->
+        tools:listitem="@layout/rv_course_modules" />
 </LinearLayout>
