--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -98,7 +98,7 @@
         android:layout_marginLeft="-4dp"
         android:layout_marginRight="-4dp"
         android:hint="Password"
-        android:inputType="textPassword|numberPassword"
+        android:inputType="textPassword"
         android:maxLength="50"
         android:maxLines="1"
         android:singleLine="true"
