--- a/app/src/main/res/layout/exit_dialog.xml
+++ b/app/src/main/res/layout/exit_dialog.xml
@@ -12,7 +12,7 @@
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Exit"
+        android:text=""
         android:textColor="@color/colorPrimaryDark"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="16dp"
-        android:text="Are you sure you want to exit?"
+        android:text=""
         android:textSize="18sp" />
 
     <LinearLayout
