--- a/app/src/main/res/layout/activity_quiz_new.xml
+++ b/app/src/main/res/layout/activity_quiz_new.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryDark">
 
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/quiz_toolbar"
         android:layout_width="match_parent"
@@ -15,14 +16,16 @@
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:navigationIcon="@drawable/ic_baseline_arrow_back_24" />
 
     <LinearLayout
         android:id="@+id/base_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/white"
         android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/quiz_toolbar">
@@ -36,6 +39,7 @@
             android:layout_marginEnd="10dp"
             android:gravity="center_horizontal"
             android:text="TextView"
+            android:textColor="@color/colorPrimaryDark"
             android:textStyle="bold" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -44,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:text="TextView"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="16sp" />
 
         <RadioGroup
@@ -57,35 +62,91 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="RadioButton" />
+                android:buttonTint="@color/colorPrimaryDark"
+                android:checked="false"
+                android:text="RadioButton"
+                android:textColor="@color/colorPrimaryDark" />
 
             <RadioButton
                 android:id="@+id/option_b"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="RadioButton" />
+                android:buttonTint="@color/colorPrimaryDark"
+                android:text="RadioButton"
+                android:textColor="@color/colorPrimaryDark" />
 
             <RadioButton
                 android:id="@+id/option_c"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="RadioButton" />
+                android:buttonTint="@color/colorPrimaryDark"
+                android:text="RadioButton"
+                android:textColor="@color/colorPrimaryDark" />
 
             <RadioButton
                 android:id="@+id/option_d"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
-                android:text="RadioButton" />
+                android:buttonTint="@color/colorPrimaryDark"
+                android:text="RadioButton"
+                android:textColor="@color/colorPrimaryDark" />
         </RadioGroup>
 
-        <Button
-            android:id="@+id/btn_next"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="25dp"
-            android:text="Next" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="25dp"
+        android:background="@drawable/btn_rounded_primary"
+        android:text="Next"
+        android:textColor="@color/colorPrimaryDark"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/base_layout"
+        app:layout_constraintVertical_bias="0.0" />
+
+    <FrameLayout
+        android:id="@+id/layout_gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Please wait for the quiz to load"
+                android:textColor="@color/colorPrimary"
+                android:textSize="20dp" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar_quiz"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
