--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -27,6 +27,7 @@
         android:id="@+id/rv_course_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:divider="@color/colorPrimaryDark"
         tools:listitem="@layout/rv_row_home" />
 
 
