--- a/app/src/main/res/layout/courses_lesson.xml
+++ b/app/src/main/res/layout/courses_lesson.xml
@@ -37,6 +37,23 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">-->
 
+    <Button
+        android:id="@+id/next_lesson_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|end"
+        android:layout_margin="8dp"
+        android:background="@drawable/btn_color"
+        android:text="@string/next"
+        android:textColor="@color/white"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_lesson_content"
+        app:layout_constraintVertical_bias="1.0" />
+
     <com.github.barteksc.pdfviewer.PDFView
         android:id="@+id/pdfView"
         android:layout_width="match_parent"
@@ -46,31 +63,44 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_lesson_content" />
-<!--
+
+
+    <FrameLayout
+        android:id="@+id/layout_gone"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Loading..."
+                android:textColor="@color/colorPrimary"
+                android:textSize="20dp" />
+
+            <ProgressBar
+                android:id="@+id/progress_bar_quiz"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
-    </androidx.core.widget.NestedScrollView>
--->
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center|end"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar_lesson_content"
-        app:layout_constraintVertical_bias="1.0">
+    </FrameLayout>
 
-        <Button
-            android:id="@+id/next_lesson_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:background="@drawable/bg_main"
-            android:textColor="@color/colorPrimary"
-            tools:text="Quiz" />
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
