--- a/app/src/main/res/layout/rv_course_modules.xml
+++ b/app/src/main/res/layout/rv_course_modules.xml
@@ -41,7 +41,7 @@
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="20sp" />
 
-
+<!--
                 <TextView
                     android:id="@+id/topic_percentage"
                     android:layout_width="wrap_content"
@@ -51,7 +51,7 @@
                     android:padding="10dp"
                     android:text="0%"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="14sp" />-->
 
 
 
