--- a/app/src/main/res/layout/rv_course_modules.xml
+++ b/app/src/main/res/layout/rv_course_modules.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_marginStart="4dp"
-    android:layout_marginBottom="4dp"
+    android:layout_margin="4dp"
+    android:gravity="center"
+    android:layout_gravity="center"
     android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
@@ -12,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center"
+        android:layout_gravity="center"
         app:cardCornerRadius="15dp"
         app:contentPadding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,7 +26,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
             android:orientation="vertical">
 
@@ -36,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:ellipsize="end"
-                android:singleLine="true"
+                android:singleLine="false"
                 android:text="MATHEMATICS"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="20sp" />
