--- a/app/src/main/res/layout/rv_row_home.xml
+++ b/app/src/main/res/layout/rv_row_home.xml
@@ -67,14 +67,14 @@
                 android:background="@color/white"
                 android:gravity="center|end"
                 android:orientation="vertical">
-
+<!--
                 <TextView
                     android:id="@+id/course_percentage"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:singleLine="true"
                     android:text="0%"
-                    android:textSize="14sp" />
+                    android:textSize="14sp" />-->
 
                 <TextView
                     android:id="@+id/module_count"
